cmake_minimum_required(VERSION 3.0)

ADD_SUBDIRECTORY(example_1)
ADD_SUBDIRECTORY(example_2)
ADD_SUBDIRECTORY(example_3)
ADD_SUBDIRECTORY(example_4)
ADD_SUBDIRECTORY(example_5)
ADD_SUBDIRECTORY(example_6)

#INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
#INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})
#LINK_DIRECTORIES(${PROJECT_LIB_DIR})





