cmake_minimum_required(VERSION 3.0)

ADD_SUBDIRECTORY(example_1)
ADD_SUBDIRECTORY(example_2)
ADD_SUBDIRECTORY(example_3)
ADD_SUBDIRECTORY(example_4)
ADD_SUBDIRECTORY(example_5)
ADD_SUBDIRECTORY(example_6)
#ADD_SUBDIRECTORY(example_7)
ADD_SUBDIRECTORY(example_8)
ADD_SUBDIRECTORY(example_9)
ADD_SUBDIRECTORY(example_10)
ADD_SUBDIRECTORY(example_11)
ADD_SUBDIRECTORY(example_12)
ADD_SUBDIRECTORY(example_13)
ADD_SUBDIRECTORY(example_14)
ADD_SUBDIRECTORY(example_15)
ADD_SUBDIRECTORY(example_16)
ADD_SUBDIRECTORY(example_17)
ADD_SUBDIRECTORY(example_18)
ADD_SUBDIRECTORY(example_19)
ADD_SUBDIRECTORY(example_20)
ADD_SUBDIRECTORY(example_21)
ADD_SUBDIRECTORY(example_22)
ADD_SUBDIRECTORY(example_23)





