cmake_minimum_required(VERSION 3.0)
ADD_SUBDIRECTORY(test_stoppable_task)
ADD_SUBDIRECTORY(test_thread_pool)
ADD_SUBDIRECTORY(test_dot_product)
ADD_SUBDIRECTORY(test_vector_updater)
ADD_SUBDIRECTORY(test_parallel_for)
ADD_SUBDIRECTORY(test_file_writer_base)
INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
#INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})
