cmake_minimum_required(VERSION 3.0)

ADD_SUBDIRECTORY(test_stoppable_task)
ADD_SUBDIRECTORY(test_thread_pool)
ADD_SUBDIRECTORY(test_dot_product)
ADD_SUBDIRECTORY(test_vector_updater)
ADD_SUBDIRECTORY(test_parallel_for)
ADD_SUBDIRECTORY(test_parallel_for_omp)
ADD_SUBDIRECTORY(test_parallel_reduce)
ADD_SUBDIRECTORY(test_file_writer_base)
ADD_SUBDIRECTORY(test_matrix_utilities)
ADD_SUBDIRECTORY(test_real_vector_polynomial)
ADD_SUBDIRECTORY(test_data_set_loaders)
ADD_SUBDIRECTORY(test_dof_object)
ADD_SUBDIRECTORY(test_line_mesh)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})
