cmake_minimum_required(VERSION 3.0)
PROJECT(Example CXX)
SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe)
message("Project ${PROJECT_INCL_DIR}")
INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})
#LINK_DIRECTORIES(${BOOST_LIBRARYDIR})
#LINK_DIRECTORIES(${CUBIC_KERNEL_LIB_DIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

# Link the executable
TARGET_LINK_LIBRARIES(${EXECUTABLE} cubicengine)
#TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
#TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_filesystem)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
