cmake_minimum_required(VERSION 3.0)

PROJECT(Example CXX)
SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_1)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

# Link the executable
TARGET_LINK_LIBRARIES(${EXECUTABLE} cubicengine)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
