cmake_minimum_required(VERSION 3.0)
PROJECT(Example CXX)

SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_28)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
INCLUDE_DIRECTORIES(${KERNEL_INCL_DIR})
INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})

# we need NLOpt for this tutorial
INCLUDE_DIRECTORIES(/home/david/qi3/cubic_engine_external/nlopt/install/include)

LINK_DIRECTORIES(${PROJECT_LIB_DIR})
LINK_DIRECTORIES(${KERNEL_LIB_DIR})
LINK_DIRECTORIES(/home/david/qi3/cubic_engine_external/nlopt/install/lib)


ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubicengine)
TARGET_LINK_LIBRARIES(${EXECUTABLE} kernellib)

IF(USE_PYTORCH MATCHES "ON")
TARGET_LINK_LIBRARIES(${EXECUTABLE} "${TORCH_LIBRARIES}")
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

TARGET_LINK_LIBRARIES(${EXECUTABLE} lopt)
