cmake_minimum_required(VERSION 3.0)
PROJECT(Example CXX)

SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_3)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})
LINK_DIRECTORIES(${PARFRAMELIB_LIB_DIR})
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

# Link the executable
TARGET_LINK_LIBRARIES(${EXECUTABLE} cubicengine)
TARGET_LINK_LIBRARIES(${EXECUTABLE} parframelib)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_serialization)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
