cmake_minimum_required(VERSION 3.0)
PROJECT(Example CXX)

SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_3)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
LINK_DIRECTORIES(${PROJECT_LIB_DIR})
LINK_DIRECTORIES(${KERNEL_LIB_DIR})
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

# Link the executable
TARGET_LINK_LIBRARIES(${EXECUTABLE} cubicengine)
TARGET_LINK_LIBRARIES(${EXECUTABLE} kernellib)

IF(USE_PYTORCH MATCHES "ON")
TARGET_LINK_LIBRARIES(${EXECUTABLE} "${TORCH_LIBRARIES}")
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_serialization)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

IF(USE_TRILINOS MATCHES "ON")
TARGET_LINK_LIBRARIES(${EXECUTABLE} epetra)
TARGET_LINK_LIBRARIES(${EXECUTABLE} aztecoo)
TARGET_LINK_LIBRARIES(${EXECUTABLE} amesos)
ENDIF()
