cmake_minimum_required(VERSION 3.0)

if(COMMAND cmake_policy)
    CMAKE_POLICY(SET CMP0003 NEW)
    CMAKE_POLICY(SET CMP0048 NEW)
    CMAKE_POLICY(SET CMP0065 NEW)
endif(COMMAND cmake_policy)

PROJECT(Example CXX)
SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_6)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR})
INCLUDE_DIRECTORIES(${KERNEL_INCL_DIR})
INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})

LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${KERNEL_LIB_DIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC cubicengine)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC kernellib)

IF(USE_PYTORCH)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC "${TORCH_LIBRARIES}")
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC pthread)

IF(USE_TRILINOS)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC epetra)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC aztecoo)
TARGET_LINK_LIBRARIES(${EXECUTABLE} PUBLIC amesos)
ENDIF()
