cmake_minimum_required(VERSION 3.0)
SET(TEST_SOURCE exe.cpp)
SET(EXECUTABLE  exe_2)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR}) 

SET(CMAKE_CXX_FLAGS "-std=c++17 -g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

# use the Boost link directories
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})

ADD_EXECUTABLE(${EXECUTABLE} ${TEST_SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_filesystem)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

IF(USE_TRILINOS MATCHES "ON")
TARGET_LINK_LIBRARIES(${EXECUTABLE} epetra)
TARGET_LINK_LIBRARIES(${EXECUTABLE} aztecoo)
TARGET_LINK_LIBRARIES(${EXECUTABLE} amesos)
ENDIF()
