cmake_minimum_required(VERSION 3.0)
SET(SOURCE exe.cpp)
SET(EXECUTABLE  exe_6)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR}) 

SET(CMAKE_CXX_FLAGS "-std=c++17 -g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

# use the Boost link directories
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

