cmake_minimum_required(VERSION 3.0)

PROJECT(test_linear_mesh_partitioner CXX)
SET(SOURCE test.cpp)
SET(EXECUTABLE  test_linear_mesh_partitioner)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
INCLUDE_DIRECTORIES(${BLAZE_INCL_DIR})
INCLUDE_DIRECTORIES(${GTEST_INC_DIR})

LINK_DIRECTORIES(${PROJECT_LIB_DIR})
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})
LINK_DIRECTORIES(${GTEST_LIB_DIR})

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

# Link the executable
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest_main) # so that tests don't need to have a main
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)

IF(USE_TRILINOS MATCHES "ON")
TARGET_LINK_LIBRARIES(${EXECUTABLE} epetra)
TARGET_LINK_LIBRARIES(${EXECUTABLE} aztecoo)
ENDIF()




