cmake_minimum_required(VERSION 3.0)
SET(TEST_SOURCE test.cpp)
SET(EXECUTABLE  test_max_element_module)

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR}) 

SET(CMAKE_CXX_FLAGS "-std=c++17 -g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

ADD_EXECUTABLE(${EXECUTABLE} ${TEST_SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_filesystem)
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_unit_test_framework)
ADD_TEST(NAME ${EXECUTABLE} COMMAND ${EXECUTABLE})
